--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -18,6 +18,7 @@
   align-items: center;
   padding: 8px;
   position: absolute;
+  overflow: hidden;
 
   h3, h2 {
     color: $light-purple;
@@ -36,7 +37,12 @@
     text-align: center;
     font-size: 16px;
     max-height: 190px;
-    overflow-y: scroll;
+    overflow-y: auto;
+  }
+
+  p::-webkit-scrollbar {
+    width: .3em;
+    background-color: $transparent-purple;
   }
 
   .goblet {
